# final-group06

./: .gitignore  AI_Documentation.txt  Analysis1.ipynb  EDA.ipynb  KarakoramAnalysis.ipynb  Makefile  Non-KarakoramAnalysis.ipynb  README.md  eda.ipynb  environment.yml  index.md  karakoram_analysis.ipynb  main.ipynb  myst.yml  non-karakoram_analysis.ipynb  pyproject.toml  references.bib
.ipynb_checkpoints/: EDA-checkpoint.ipynb  bib-checkpoint.bibt  eda-checkpoint.ipynb  main-checkpoint.ipynb  myst-checkpoint.yml
_build/logs/: myst.build.json
data/Karakoram/: NSIDC-0801_SR_20190318-20190403_vm_LS_V01.0.tif  NSIDC-0801_SR_20190318-20221231_outline_V01.0.dbf  NSIDC-0801_SR_20190318-20221231_outline_V01.0.prj  NSIDC-0801_SR_20190318-20221231_outline_V01.0.shp  NSIDC-0801_SR_20190318-20221231_ssm_V01.0.tif  NSIDC-0801_SR_20190403-20190419_vm_LS_V01.0.tif  NSIDC-0801_SR_20190419-20190521_vm_LS_V01.0.tif  NSIDC-0801_SR_20190521_20190606_vm_LS_V01.0.tif  NSIDC-0801_SR_20190606-20190622_vm_LS_V01.0.tif  NSIDC-0801_SR_20190622-20190708_vm_LS_V01.0.tif  NSIDC-0801_SR_20190708-20190724_vm_LS_V01.0.tif  NSIDC-0801_SR_20190724_20190825_vm_LS_V01.0.tif  NSIDC-0801_SR_20190825-20190910_vm_LS_V01.0.tif  NSIDC-0801_SR_20190901-20190906_vm_PS_V01.0.tif  NSIDC-0801_SR_20190901-20190915_vm_PS_V01.0.tif  NSIDC-0801_SR_20190906-20190913_vm_PS_V01.0.tif  NSIDC-0801_SR_20190910-20190926_vm_LS_V01.0.tif  NSIDC-0801_SR_20190913-20190920_vm_PS_V01.0.tif  NSIDC-0801_SR_20190915-20191003_vm_PS_V01.0.tif  NSIDC-0801_SR_20190920-20190925_vm_PS_V01.0.tif  (+292 more)
glaciers/: __init__.py  glaciers.py
(+200 files in other folders)
